--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1,10 +1,14 @@
+.cs_content {
+    margin-top: 90px;
+}
+
 .inner-bnr {
     background-color: #0d0c17;
     padding-top: 195px;
     padding-bottom: 90px;
     position: relative;
     z-index: 1;
-    height: 400px;
+    height: 500px;
 }
 
 .inner-bnr::after {
@@ -281,4 +285,167 @@ section.hero--reverse {
 
 .reverse-btn a::after {
     background: var(--dark-brown);
+}
+
+/* blog page css */
+.blog-bnr {
+    background: url(../images//img/blog-bnr.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.blog-sec-main {
+    padding: 60px 0;
+}
+
+.blog-list-layout--list {
+    padding-left: 4rem;
+    padding-right: 3.5rem;
+}
+
+.side-right .widget {
+    padding: 20px;
+    border-radius: 10px;
+    border: 1px solid rgba(131, 131, 131, 0.25);
+}
+
+.widget:not(:last-child) {
+    margin-bottom: 30px;
+}
+
+div#search-1 form {
+    position: relative;
+    display: flex;
+    flex: auto;
+    flex-wrap: nowrap;
+    max-width: 100%;
+}
+
+.search-field {
+    width: 100%;
+    outline: none;
+    font-size: 1.1em;
+    padding: 15px 0;
+    padding-right: 40px;
+    border: none;
+    background: transparent;
+    color: #000;
+    border-bottom: 1px solid rgba(130, 130, 130, 0.25);
+    text-transform: capitalize;
+}
+
+button.search-submit {
+    border: none;
+    background: none;
+    position: absolute;
+    top: 5px;
+    bottom: 0;
+    right: 0;
+    font-size: 20px;
+}
+
+.side-right .widget ul {
+    padding: 0;
+    margin: 0;
+}
+
+.side-right .widget.widget_categories ul li {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: #83c501;
+}
+
+.side-right .widget ul li a {
+    padding: 5px 0;
+    display: inline-flex;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--secondary-clr);
+    font-family: var(--sansantion);
+    text-transform: capitalize;
+}
+
+.widget.widget_recent_entries ul li {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.recent-post-image {
+    width: 80px;
+    height: 80px;
+    flex: none;
+}
+
+.widget-title {
+    font-size: 26px;
+    line-height: 34px;
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+
+.widget.widget_recent_entries ul {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.entry-title h2 {
+    font-size: 32px;
+    line-height: 42px;
+    word-wrap: break-word;
+    margin-bottom: 5px;
+}
+
+.post_meta span {
+    color: #83c501;
+    font-size: 16px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.article-space {
+    margin-bottom: 50px;
+}
+
+.blog-post-img {
+    margin-bottom: 30px;
+}
+
+.blog-post-img a img {
+    border-radius: 25px;
+}
+
+.link-text {
+    position: relative;
+    margin-right: 0;
+    display: inline-block;
+    vertical-align: middle;
+    text-indent: -110px;
+    visibility: hidden;
+    opacity: 0;
+    white-space: nowrap;
+    -webkit-transition: visibility 0.4s ease, margin-right 0.4s ease-out, text-indent 0.5s ease-out, color 0.4s ease, opacity 0.4s ease;
+    -ms-transition: visibility 0.4s ease, margin-right 0.4s ease-out, text-indent 0.5s ease-out, color 0.4s ease, opacity 0.4s ease;
+    transition: visibility 0.4s ease, margin-right 0.4s ease-out, text-indent 0.5s ease-out, color 0.4s ease, opacity 0.4s ease;
+    will-change: visibility, margin-right, text-indent, color, opacity;
+}
+
+.read-btn-ctms:hover .link-text {
+    opacity: 1;
+    text-indent: 0;
+    margin-right: 6px;
+    visibility: visible;
+    -webkit-transition: visibility 0.4s ease, margin-right 0.3s ease-out, text-indent 0.4s ease-out, color 0.4s ease, opacity 0.4s ease;
+    -ms-transition: visibility 0.4s ease, margin-right 0.3s ease-out, text-indent 0.4s ease-out, color 0.4s ease, opacity 0.4s ease;
+    transition: visibility 0.4s ease, margin-right 0.3s ease-out, text-indent 0.4s ease-out, color 0.4s ease, opacity 0.4s ease;
+}
+
+.entry-list-layout {
+    overflow: hidden;
 }
