--- a/css/style-new.css
+++ b/css/style-new.css
@@ -423,3 +423,29 @@ li.tab-link.current {
     font-weight: 600;
     display: block;
 }
+
+.pagination-inner {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    flex-wrap: wrap;
+    gap: 18px;
+}
+
+.pagination-inner a {
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #093c55;
+    color: #093c55;
+}
+
+.pagination-inner a:hover {
+    background-color: #093c55 !important;
+    color: #fff;
+}
