--- a/css/style-new.css
+++ b/css/style-new.css
@@ -474,6 +474,7 @@ li.tab-link.current {
 .industry-categories .row .col-lg-3.col-md-6 {
     margin-bottom: 30px;
 }
+
 .industry-categories-content h4 {
     margin-bottom: 5px;
 }
@@ -488,6 +489,18 @@ li.tab-link.current {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
+
 .categories-btn {
     text-align: center;
+}
+
+.benefits-list-inner {
+    transition: all 0.4s ease-in-out;
+    box-shadow: 0px 0px 20px 10px rgba(216, 216, 216, 0.25);
+    border-radius: 15px;
+    height: 100%;
+}
+
+.the-benefits-inner .row .col-md-4 {
+    margin-bottom: 30px;
 }
