--- a/css/style-new.css
+++ b/css/style-new.css
@@ -525,4 +525,6 @@ li.tab-link.current {
     height: 100%;
     object-fit: cover;
     width: 100%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
