--- a/css/style-new.css
+++ b/css/style-new.css
@@ -263,6 +263,7 @@ section.hero--reverse {
     justify-content: center;
     gap: 20px;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .reverse-btn a,
@@ -484,7 +485,7 @@ li.tab-link.current {
     padding: 20px;
 }
 
-.industry-categories .row .col-lg-3.col-md-6 {
+.industry-categories .row .col-12.col-md-6.col-lg-4.col-xl-3 {
     margin-bottom: 30px;
 }
 
@@ -501,6 +502,7 @@ li.tab-link.current {
     object-fit: cover;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    width: 100%;
 }
 
 .categories-btn {
