--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1141,12 +1141,13 @@ section.why-tap {
     }
     
     .widget-title {
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    font-size: 22px;
-    font-weight: 500;
-    letter-spacing: -.02em;
-    border-bottom: 1px solid #f0f0f0;
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+        font-size: 22px;
+        font-weight: 500;
+        letter-spacing: -.02em;
+        border-bottom: 1px solid #f0f0f0;
+        color: #093c55;
     }
     .widget-menu li {
     padding: 5px 0;
