--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1411,7 +1411,131 @@ button.ads-form-btn.cs_btn:hover::after {
 
 }
 
-select option:hover{background-color:yellow !important;}
+.add-btn {
+    display: flex;
+    gap: 30px;
+}
+
+.ads-modal label {
+    font-size: 16px;
+    margin-bottom: 5px;
+    display: block;
+    text-transform: capitalize;
+    color: #000;
+}
+
+.ads-modal input,
+.ads-modal select {
+    display: block;
+    width: 100%;
+    border-radius: 10px;
+    outline: none;
+    transition: all 0.3s ease;
+    border: 1px solid #a3a2a3;
+    resize: none;
+    padding: 10px;
+}
+
+.ads-modal-wraper {
+    margin-bottom: 14px;
+}
+
+.modal-header {
+    justify-content: flex-end;
+}
+
+button.close {
+    padding: 0;
+    border: none;
+    height: 35px;
+    width: 35px;
+    background-color: #ff2d55;
+    color: #ffffff;
+    font-size: 18px;
+    border-radius: 5px;
+    transition: all 0.4s ease;
+}
+
+.ads-modal .row {
+    align-items: center;
+}
+
+.detailed-blog .modal-dialog {
+    max-width: 960px;
+    width: 100%;
+}
+
+.contact-ads a {
+    display: block;
+    color: #000;
+    font-size: 18px;
+    padding-bottom: 16px;
+}
+
+.contact-ads i {
+    margin-right: 8px;
+}
+
+.qr_code-text h3 {
+    font-size: 20px;
+    margin-top: 20px;
+    line-height: 22px;
+}
+
+.qr_code img {
+    width: 100%;
+    height: 290px;
+    object-fit: cover;
+}
+
+.qr_code-content h5 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.ads-social-icon ul li a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    color: #093c55;
+    border: 1px solid #093c55;
+    transition: all 0.3s linear;
+}
+
+.ads-social-icon ul li a:hover {
+    transform: translateY(-6px);
+}
+
+.ads-social-icon ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 12px;
+}
+
+.ads-modal-main .modal-dialog {
+    max-width: 920px;
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Responsive */
