--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1449,7 +1449,7 @@ button.close {
     border: none;
     height: 35px;
     width: 35px;
-    background-color: #ff2d55;
+    background-color: #093c55;
     color: #ffffff;
     font-size: 18px;
     border-radius: 5px;
