--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1431,9 +1431,10 @@ button.ads-form-btn.cs_btn:hover::after {
     border-radius: 10px;
     outline: none;
     transition: all 0.3s ease;
-    border: 1px solid #a3a2a3;
+    border: 1px solid #f5f5f7;
     resize: none;
     padding: 10px;
+    background-color: #f5f5f7;
 }
 
 .ads-modal-wraper {
