--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1522,8 +1522,12 @@ button.close {
     max-width: 920px;
     width: 100%;
 }
-
-
+.blog-post-img img {
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+}
 
 
 
