--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1522,8 +1522,9 @@ button.close {
     max-width: 920px;
     width: 100%;
 }
+
 .blog-post-img img {
-    height: 250px;
+    height: 250px !important;
     object-fit: cover;
     object-position: center;
     width: 100%;
