--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1530,13 +1530,61 @@ button.close {
     width: 100%;
 }
 
+.custom-select-wrapper {
+    position: relative;
+    width: 100%;
+    user-select: none;
+}
 
+.custom-select-trigger {
+    display: block;
+    width: 100%;
+    padding: 11px 20px;
+    border-radius: 10px;
+    outline: none;
+    transition: all 0.3s ease;
+    border: 1px solid #a3a2a3;
+    resize: none;
+    box-shadow: none;
+    display: flex;
+    justify-content: space-between;
+    color: #000;
+}
 
+.select-icon {
+    font-size: 18px;
+    color: #333;
+}
 
+.custom-options {
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    left: 0;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-top: none;
+    z-index: 5;
+    display: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    color: #000;
+}
 
+.custom-option {
+    padding: 12px 16px;
+    cursor: pointer;
+}
 
+.custom-option:hover {
+    background: #093c55;
+    color: #fff;
+}
 
-
+.custom-select-wrapper.open .custom-options {
+    display: block;
+}
 
 
 
