--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1586,9 +1586,28 @@ button.close {
     display: block;
 }
 .modal-custom-footer input {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    background: transparent;
+    border: none;
+    padding: 0;
+    color: #fff;
+}
+.modal-custom-footer {
+    text-align: right;
+}
+
+.ads-modal-main  .custom-select-trigger {
+    width: 100%;
+    border-radius: 10px;
+    outline: none;
+    transition: all 0.3s ease;
+    border: 1px solid #f5f5f7;
+    resize: none;
+    padding: 10px;
+    background-color: #f5f5f7;
+    display: flex;
+    color: #a3a2a3;
+}
+.modal-custom-footer {
     color: #ffffff;
     padding: 12px 30px;
     border-radius: 7px;
@@ -1602,15 +1621,12 @@ button.close {
     font-size: 18px;
     font-family: var(--sansantion);
     background-color: #093c55;
-    width: auto;
+    width: 100%;
+    max-width: 155px;
+    margin-top: 20px;
+    margin-left: auto;
+    display: block;
 }
-
-.modal-custom-footer {
-    text-align: right;
-}
-
-
-
 
 
 
