--- a/css/style-new.css
+++ b/css/style-new.css
@@ -1627,7 +1627,9 @@ button.close {
     margin-left: auto;
     display: block;
 }
-
+.custom-select-wrapper {
+    margin-bottom: 14px;
+}
 
 
 /* Responsive */
