--- a/css/style-new.css
+++ b/css/style-new.css
@@ -42,7 +42,7 @@
 .sec-heading h3 {
     font-size: 40px;
     line-height: 1.3em;
-    color: #000;
+    color: #fff;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -564,16 +564,19 @@ li.tab-link.current {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
-
+.pricing-sec {
+    background: #093c55;
+}
 .zip-check-form {
     width: 100%;
     max-width: 900px;
     margin: 0 auto;
     transition: all 0.4s ease-in-out;
-    box-shadow: 0px 0px 20px 10px rgba(216, 216, 216, 0.25);
+    /* box-shadow: 0px 0px 20px 10px rgba(216, 216, 216, 0.25); */
     border-radius: 15px;
     height: 100%;
     padding: 30px;
+    background-color: #fff;
 }
 
 .zip-check-form select,
@@ -1585,17 +1588,19 @@ button.close {
 .custom-select-wrapper.open .custom-options {
     display: block;
 }
+
 .modal-custom-footer input {
     background: transparent;
     border: none;
     padding: 0;
     color: #fff;
 }
+
 .modal-custom-footer {
     text-align: right;
 }
 
-.ads-modal-main  .custom-select-trigger {
+.ads-modal-main .custom-select-trigger {
     width: 100%;
     border-radius: 10px;
     outline: none;
@@ -1607,6 +1612,7 @@ button.close {
     display: flex;
     color: #a3a2a3;
 }
+
 .modal-custom-footer {
     color: #ffffff;
     padding: 12px 30px;
@@ -1627,9 +1633,191 @@ button.close {
     margin-left: auto;
     display: block;
 }
+
 .custom-select-wrapper {
     margin-bottom: 14px;
 }
+
+/* 18-4-25 */
+.system-box {
+    transition: all 0.4s ease-in-out;
+    box-shadow: 0px 0px 20px 10px rgba(216, 216, 216, 0.25);
+    border-radius: 15px;
+    height: 100%;
+    padding: 30px;
+    text-align: center;
+    position: relative;
+}
+
+.setp-num {
+    background: #70bf2b;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 50%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.system-works .row .col-lg-4 {
+    margin-bottom: 30px;
+}
+
+.steps-works-inner {
+    text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+}
+
+.steps-works-inner h4 {
+    font-size: 40px;
+    line-height: 50px;
+    margin-bottom: 10px;
+}
+
+.system-works {
+    margin-top: 60px;
+}
+
+.icon-img {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.system-box h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.system-box p {
+    color: #000;
+    font-size: 16px;
+}
+
+
+
+.timeline {
+    position: relative;
+    max-width: 800px;
+    margin: auto;
+}
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 4px;
+    background-color :#eaebed;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -2px;
+}
+
+.step-card {
+    position: relative;
+    background: #ffffff;
+    border: 1px solid #eaebed;
+    border-radius: 16px;
+    padding: 30px;
+    /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.step-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+}
+
+.step-number {
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #093c55;
+    color: #fff;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    font-weight: bold;
+    z-index: 1;
+}
+
+.timeline .container.left {
+    margin-right: auto;
+    margin-left: 0;
+    padding-right: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.timeline .container.right {
+    margin-left: auto;
+    margin-right: 0;
+    padding-left: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+
+.timeline .container {
+    padding: 20px;
+    position: relative;
+    width: 50%;
+}
+
+.timeline .container.left .step-card::after {
+    content: "";
+    position: absolute;
+    width: 32px;
+    height: 2px;
+    background: #eaebed;
+    top: 50%;
+    right: 0;
+    transform: translate(100%, -50%);
+}
+
+.timeline .container.right .step-card::after {
+    content: "";
+    position: absolute;
+    width: 32px;
+    height: 2px;
+    background:#eaebed;
+    top: 50%;
+    left: 0;
+    transform: translate(-100%, -50%);
+}
+
+.step-card h3 {
+    font-size: 22px;
+    margin-bottom: 8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Responsive */
