--- a/css/style-new.css
+++ b/css/style-new.css
@@ -564,9 +564,11 @@ li.tab-link.current {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
+
 .pricing-sec {
     background: #093c55;
 }
+
 .zip-check-form {
     width: 100%;
     max-width: 900px;
@@ -1708,13 +1710,14 @@ button.close {
     position: relative;
     max-width: 800px;
     margin: auto;
+    margin-bottom: 50px;
 }
 
 .timeline::after {
     content: '';
     position: absolute;
     width: 4px;
-    background-color :#eaebed;
+    background-color: #eaebed;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -1792,7 +1795,7 @@ button.close {
     position: absolute;
     width: 32px;
     height: 2px;
-    background:#eaebed;
+    background: #eaebed;
     top: 50%;
     left: 0;
     transform: translate(-100%, -50%);
@@ -1886,5 +1889,33 @@ button.close {
 @media(max-width:767px) {
     form.ads-form .row .col-md-4 {
         margin-bottom: 20px;
+    }
+
+    .timeline .container {
+        width: 100%;
+    }
+
+    .timeline::after {
+        display: none;
+    }
+
+    .timeline .container.right .step-card::after {
+        display: none;
+    }
+
+    .timeline .container.left .step-card::after {
+        display: none;
+    }
+
+    .timeline .container.right {
+        padding: 0;
+    }
+
+    .timeline .container.left {
+        padding: 0;
+
+    }
+    .timeline .container {
+        margin-bottom: 30px;
     }
 }
